Tweak CSS slightly, add visibility, add availability directive in books, prevent reservation of unavailable books.

--- a/public/styles.css
+++ b/public/styles.css
@@ -22,7 +22,7 @@ body {
     padding: 0;
     font-family: "Arial", sans-serif;
     background: rgb(160,90,156);
-    background: linear-gradient(139deg, rgba(160, 90, 156, 0.7959558823529411) 0%, rgb(131 116 217 / 80%) 66%, rgba(241, 242, 242, 1) 100%);
+    background: linear-gradient(139deg, rgba(160, 90, 156, 1) 0%, rgb(131 116 217 / 80%) 66%, rgba(241, 242, 242, 1) 100%);
     height: 100vh;
 }
 .non-gradient-body{
@@ -100,7 +100,7 @@ a{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 10px 20px 10px;
+    padding: 20px 10px 20px 0;
 }
 
 .add-new-button {
@@ -416,7 +416,7 @@ tbody tr:hover {
     background-color: #1f2041;
     border-radius: 5px;
     padding: 10px 10px;
-    border:0px;
+    border: 0px;
     height: 35px;
     color:white;
     cursor: pointer;
@@ -518,10 +518,6 @@ tbody tr:hover {
 .delete-profile-button:hover {
     background-color: #b80909;
 
-}
-.delete-button-container{
-    display:flex;
-    flex-direction: row-reverse;
 }
 .form-button:hover{
     background-color: #3f3561;
@@ -896,6 +892,10 @@ nav a {
     .book-cover {
         display: none;
     }
+}
+
+.caps {
+    text-transform: uppercase;
 }
 
 
